Edited wiki page QuickStart through web user interface.

--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -5,9 +5,9 @@
 
 Step-by-step instructions to analyzing your mzXML or mzML data. Detailed instructions can be found on other pages in this wiki (links soon).
 
-= Similar Topics =
+= Related Topics =
 
-(to be added soon)
+Parameters
 
 ----
 
@@ -31,7 +31,7 @@ Step-by-step instructions to analyzing your mzXML or mzML data. Detailed instruc
     * _Example:  percolator_file = C:\Data\MyProject\DataFile1-percolator.txt_
   d. Change _ database _ to the amino acid sequence database you want to use.
     * _Example:  database = C:\FASTA\MyDatabase.fasta_
-  e. Set other parameters as necessary. Parameters and descriptions can be found at (url later).
+  e. Set other parameters as necessary. Parameters and descriptions can be found on the Parameters page.
   f. Save _Kojak.conf_ and exit the text editor.
 
 == Step 3: Run Kojak ==
