--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -25,12 +25,12 @@ Parameters
   a. Open _Kojak.conf_ in a text editor.
 
   b. Change _ MS_data_file _ to your data file.
-    * _Example:  MS_data_file = C:\Data\MyProject\DataFile1.mzML_
+    * _Example:  MS_data_file = !C:\Data\MyProject\DataFile1.mzML_
   c. Name your _ output_file _ and _ percolator_file _.
-    * _Example:  output_file = C:\Data\MyProject\DataFile1-results.txt_
-    * _Example:  percolator_file = C:\Data\MyProject\DataFile1-percolator.txt_
+    * _Example:  output_file = !C:\Data\MyProject\DataFile1-results.txt_
+    * _Example:  percolator_file = !C:\Data\MyProject\DataFile1-percolator.txt_
   d. Change _ database _ to the amino acid sequence database you want to use.
-    * _Example:  database = C:\FASTA\MyDatabase.fasta_
+    * _Example:  database = !C:\FASTA\MyDatabase.fasta_
   e. Set other parameters as necessary. Parameters and descriptions can be found on the Parameters page.
   f. Save _Kojak.conf_ and exit the text editor.
 
