Edited wiki page QuickStart through web user interface.

--- a/wiki/QuickStart.wiki
+++ b/wiki/QuickStart.wiki
@@ -7,7 +7,7 @@ Step-by-step instructions to analyzing your mzXML or mzML data. Detailed instruc
 
 = Related Topics =
 
-[Paramaters]
+[Parameters]
 
 ----
 
