Edited wiki page Parameters through web user interface.

--- a/wiki/Parameters.wiki
+++ b/wiki/Parameters.wiki
@@ -34,4 +34,4 @@ Add your content here.
 || search_dimers || Number || 0 or 1 || If set to 1 turns on searches for non-covalently linked dimers (not cross-links). This will no worse than double search time and is only recommended for highly concentrated and purified samples. ||
 || spectrum_processing || Number || 0 or 1 || If set to 1 turns on MS2 spectrum processing algorithm. This algorithm will collapse isotope distributions to the precursor peak and reduce the number of peaks to analyze to the number specified with the max_spectrum_peaks parameter. ||
 || top_count || Number || 1 to 10000 || This parameter is used for *Relaxed Analysis Mode* to specify the number of individual peptide scores to store in the first pass of the analysis. Setting below 200 is not recommended. Setting too high will unnecessarily consume computer resources. The recommended value is 500. ||
-|| use_comet_xcorr || Number || 0 or 1 || If set to 1 will use the XCorr scoring function from the Comet database search algorithm. If set to 0, will default to using Kojak's own rudimentary scoring function. The recommended value is 1. ||
+|| use_comet_xcorr || Number || 0 or 1 || If set to 1 will use the XCorr scoring function from the [http://comet-ms.sourceforge.net/ Comet] database search algorithm. If set to 0, will default to using Kojak's own rudimentary scoring function. The recommended value is 1. ||
