--- a/wiki/Parameters.wiki
+++ b/wiki/Parameters.wiki
@@ -3,7 +3,7 @@
 
 = Introduction =
 
-This page describes in more detail the parameters used to tune the performance of Kojak. Parameters are stored in an ASCII text configuration file. An example configuration file can be found here.
+This page describes in more detail the parameters used to tune the performance of Kojak. Parameters are stored in an ASCII text configuration file. An example configuration file can be found [SampleConfigurationFile here].
 
 = Details =
 
