--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,13 +1,8 @@
-#summary One-sentence summary of this page.
+#summary Installing Kojak binaries
+
+= Navigation =
+ * [TableOfContents Return to Table of Contents]
 
 = Introduction =
 
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+Kojak comes precompiled. No installation is necessary. Simply unzip the application to the desired location on your hard disk. More details coming soon.
