Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -5,4 +5,4 @@
 
 = Introduction =
 
-Kojak comes precompiled. No installation is necessary. Simply unzip the application to the desired location on your hard disk. More details coming soon.
+Kojak comes precompiled. No installation is necessary. Simply unzip the application to the desired location on your hard disk. In Windows, a recommended location is C:\Kojak. More details coming soon.
