Edited wiki page CompilingKojak through web user interface.

--- a/wiki/CompilingKojak.wiki
+++ b/wiki/CompilingKojak.wiki
@@ -17,8 +17,8 @@ Kojak is provided open source for free. Advanced users may wish to compile the s
 Check out the repository on the [https://code.google.com/p/kojak-ms/source/checkout Source] page. Follow the provided instructions.
 
 === Step 2: Check out the supporting software libraries ===
-a. [https://code.google.com/p/hardklor/source/checkout] Hardklor - used for spectral processing functions.
-b. [https://code.google.com/p/mstoolkit/source/checkout] MSToolkit - used to support multiple file formats.
+a. [https://code.google.com/p/hardklor/source/checkout Hardklor] - used for spectral processing functions.
+b. [https://code.google.com/p/mstoolkit/source/checkout MSToolkit] - used to support multiple file formats.
 
 === Step 3: Build support software ===
 Both Hardklor and MSToolkit come with Makefiles. Open the Makefiles to set any required paths and make as you would with any software. For example:
