--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,7 +5,7 @@
 
 == Installation ==
  * [Downloads Download] ready-to-use Kojak application.
- * Compile your own Kojak copy from source.
+ * [CompileKojak Compile] your own Kojak copy from source.
 
 == Running a Kojak Analysis ==
  * [QuickStart Quick Start tutorial].
