Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -13,7 +13,7 @@
 
 == Interpreting Results ==
  * [Percolator Using Percolator] for validation.
- * Understanding Kojak output.
+ * Understanding [Kojak Output Kojak output].
 
 == Help & Miscellaneous ==
  * Citing Kojak.
