Edited wiki page CompilingKojak through web user interface.

--- a/wiki/CompilingKojak.wiki
+++ b/wiki/CompilingKojak.wiki
@@ -10,6 +10,8 @@
 
 Kojak is provided open source for free. Advanced users may wish to compile the source code for their custom system, or modify it for their own purposes. Below are instructions for installation on a Linux-based system using the command-line. It is assumed that SVN software is already installed on the system. Kojak can also be compiled for other operating systems/development environments including, but not limited to, Microsoft Visual Studio for Windows. Specific development environment instructions are outside the scope of this document, as it is assumed users of those environments are already familiar with them.
 
+* The Kojak manuscript is currently in review. To protect this process, a key component of the source code has been omitted. It will be placed in the repository upon acceptance for publication. *
+
 
 == Details ==
 
