Edited wiki page DigestRules through web user interface.

--- a/wiki/DigestRules.wiki
+++ b/wiki/DigestRules.wiki
@@ -1,8 +1,10 @@
 #summary Digestion enzyme rules in the Kojak parameters.
 
-= Introduction =
+= Navigation =
+ * [TableOfContents Return to Table of Contents]
+ * [Parameters Return to Parameters]
 
-Digestion Enzyme Rules
+= Introduction =
 
 
 = Details =
