--- a/wiki/DigestRules.wiki
+++ b/wiki/DigestRules.wiki
@@ -6,10 +6,17 @@
 
 = Introduction =
 
+Digestion enzyme rules are specified using a formatted text string, similar to the rules used in other database search engines such as X!Tandem.
 
 = Details =
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+1. Cleavage amino acids are specified in square braces: '[]'
+2. A vertical line, '|', indicates N- or C-terminal to the residue
+3. Exception amino acids are specified in french braces: '{}'
+
+= Examples =
+
+* [KR]|{P} - Trypsin rule with cleavage after K or R, except when followed by P.
+* [KR]| - Trypsin rule with cleavage after K or R, ignoring any restrictions.
+* [DE]|{P} - GluC rule with cleavage after D or E, except when followed by P.
+* |[K] - LysN rule with cleavage before K.
