--- a/wiki/DigestRules.wiki
+++ b/wiki/DigestRules.wiki
@@ -10,11 +10,11 @@ Digestion enzyme rules are specified using a formatted text string, similar to t
 
 = Details =
 
-  1 Cleavage amino acids are specified in square braces: '[]'
+  1 Cleavage amino acids are specified in square braces: '['']'
 
   2 A vertical line, '|', indicates N- or C-terminal to the residue
 
-  3 Exception amino acids are specified in french braces: '{}'
+  3 Exception amino acids are specified in french braces: '{''}'
 
 = Examples =
 
