--- a/wiki/DigestRules.wiki
+++ b/wiki/DigestRules.wiki
@@ -10,16 +10,16 @@ Digestion enzyme rules are specified using a formatted text string, similar to t
 
 = Details =
 
-  # Cleavage amino acids are specified in square braces: []
+  # Cleavage amino acids are specified in square braces: '[]'
   # A vertical line, |, indicates N- or C-terminal to the residue
   # Exception amino acids are specified in french braces: {}
 
 = Examples =
 
-  * '['KR']'|'{'P'}' - Trypsin rule with cleavage after K or R, except when followed by P.
+  * '[KR]'|{P} - Trypsin rule with cleavage after K or R, except when followed by P.
 
-  * '['KR']'| - Trypsin rule with cleavage after K or R, ignoring any restrictions.
+  * '[KR]'| - Trypsin rule with cleavage after K or R, ignoring any restrictions.
 
-  * '['DE']'|'{'P'}' - GluC rule with cleavage after D or E, except when followed by P.
+  * '[DE]'|{P} - GluC rule with cleavage after D or E, except when followed by P.
 
-  * |'['K']' - LysN rule with cleavage before K.
+  * |'[K]' - LysN rule with cleavage before K.
