--- a/wiki/Parameters.wiki
+++ b/wiki/Parameters.wiki
@@ -11,10 +11,11 @@ This page describes in more detail the parameters used to tune the performance o
 = Details =
 
 || *Parameter* || *Value* || *Recommended Range* || *Description* ||
-|| cross_link || Number, Number, Number || see description || Specifies the sites of cross-linking and mass modification. Three values follow this parameter, with the format *chem1 chem2 mass*. Chem codes are integers signifying the reactive groups on the cross-linker: 1=amine reactive, 2=carboxyl reactive, 3=sulfhydryl reactive. The mass can be any real number, positive or negative.||
+|| cross_link || Number, Number, Number || see description || Specifies the sites of cross-linking and mass modification. Three values follow this parameter, with the format: *chem1 chem2 mass*. Chem codes are integers signifying the reactive groups on the cross-linker: 1=amine reactive, 2=carboxyl reactive, 3=sulfhydryl reactive. The mass can be any real number, positive or negative.||
 || database || Text || n/a || The name of the fasta file containing the amino acid protein sequences (and decoy sequences) to be searched. It is recommended to include the path in the name of the file. ||
 || decoy_filter || Text || n/a || A short, case-sensitive string of characters that appears in the name of every decoy protein sequence in the database. The default value is the word _random_ ||
 || enrichment || Number || 0.0-1.0 || Value between 0 and 1 to describe 18O atom percent excess (APE). For example, 0.25 equals 25 APE. Set to 0 to disable enrichment. ||
+|| enzyme || Text || see description || An enzyme string code is used to define amino acid cut sites when parsing protein sequences. See [DigestRules Enzyme Digest Rules] for more information. ||
 || fixed_modification || Text and Number || A-Y 0.1-5000.0 || Specify an amino acid character and modification mass separated by white space. For example: C 57.02146 will add that mass to all occurrences of cysteine in the sequence database. If multiple fixed modification masses are desired, use multiple fixed_modification declarations. Use @ to signify a modification to the N-terminus. ||
 || instrument || Number || 0 or 1 || Code to describe the instrument that was used to collect the spectra. 0 = Orbitrap, 1 = FTICR. ||
 || max_miscleavages || Number || 1-10 || Number of missed K or R cleavages allowed. Must be at least 2 to identify loop-links. ||
