--- a/wiki/Parameters.wiki
+++ b/wiki/Parameters.wiki
@@ -25,12 +25,12 @@ This page describes in more detail the parameters used to tune the performance o
 || max_spectrum_peaks || Number || 0-50000 || Maximum number of MS2 peaks to analyze if using spectrum_processing. Peaks are kept in order of intensity, starting with the most intense. Setting a value of 0 keeps all peaks.||
 || min_peptide_mass || Number || 1.0-50000.0 || Minimum peptide mass allowed when parsing the protein sequence database. ||
 || modification || Text and Number || A-Y 0.1-5000.0 || Specify an amino acid character and variable modification mass separated by white space. For example: M 15.9949 will search methionine residues *with and without* this modification mass. If multiple variable modification masses are desired, use multiple fixed_modification declarations. Multiple variable modification masses can be applied to the same residue. Use @ to signify a modification to the N-terminus. ||
+|| mono_link || Number and Number || see description || Specifies the sites of incomplete cross-linking and mass modification. Two values follow this parameter, with the format: *chem mass*. Chem codes are integers signifying the reactive groups on the cross-linker: 1=amine reactive, 2=carboxyl reactive, 3=sulfhydryl reactive. The mass can be any real number, positive or negative. If data contain multiple mono-link masses, use multiple mono_link lines in the configuration file.||
 || MS_data_file || Text || n/a || Name of the data file to be analyzed. Accepted formats are mzXML, mzML, Thermo RAW (on Windows with vendor drivers installed). It is recommended to include the path in the name of the file. ||
 || MS1_centroid || Number || 0 or 1 || Describes how peaks are stored in the precursor (MS1) scans. Set to 0 if peaks are profile. Set to 1 if peaks are centroided. ||
 || MS1_resolution || Number || 0-500000 || Describes the estimated resolution of precursor scan (MS1) peaks at 400 m/z. ||
 || MS2_centroid || Number || 0 or 1 || Describes how peaks are stored in the fragmentation (MS2 or MS/MS) scans. Set to 0 if peaks are profile. Set to 1 if peaks are centroided. ||
 || MS2_resolution || Number || 0-500000 || Describes the estimated resolution of fragmentation scan (MS2 or MS/MS) peaks at 400 m/z. ||
-|| mono_link || Number and Number || see description || Specifies the sites of incomplete cross-linking and mass modification. Two values follow this parameter, with the format: *chem mass*. Chem codes are integers signifying the reactive groups on the cross-linker: 1=amine reactive, 2=carboxyl reactive, 3=sulfhydryl reactive. The mass can be any real number, positive or negative. If data contain multiple mono-link masses, use multiple mono_link_mass lines in the configuration file.||
 || output_file || Text || n/a || Name of the file for Kojak non-validated results. It is recommended to include the path in the name of the file. ||
 || percolator_file || Text || n/a || Name of the file for Kojak results that are formatted for validation with [Percolator]. It is recommended to include the path in the name of the file. ||
 || percolator_version || Number || n/a || Version of [Percolator] you will be using. Different versions of Percolator have different input requirements. Kojak will determine those for you based on this supplied number. ||
