--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -19,10 +19,12 @@ If your system is not included in the list, let us know on the message board. Al
 
 == Select Your Operating System ==
 
-=== Windows 32-bit and 64-bit ===
- * Version 1.3.2 (Dec 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkYnVsRmZ3a1d3WWc Latest Version - Download Now]
+=== Windows 32-bit (works with 64-bit) ===
+ * Version 1.3.3 (Jan 2015): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkNGE2aDN2WU5sMXc Latest Version - Download Now]
+ * Version 1.3.2 (Dec 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkYnVsRmZ3a1d3WWc Legacy Download]
  * Version 1.0 (May 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkY0V0MnhRSHk5LXM Legacy Download]
 
 === Linux 64-bit ===
- * Version 1.3.2 (Dec 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkT3NYdFN2VUNnTzA Latest Version - Download Now]
+ * Version 1.3.3 (Jan 2015): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkZWJQNUo0c21BY2M Latest Version - Download Now]
+ * Version 1.3.2 (Dec 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkT3NYdFN2VUNnTzA Legacy Download]
  * Version 1.0 (May 2014): [https://drive.google.com/uc?export=download&id=0ByyfOdPaY1xkN3paa1hPbkc5OUE Legacy Download]
